CHANGES.txt - 06/13/2002
------------------------

CHANGES IN HTMLDOC v1.8.21

    NEW FEATURES

	- HTMLDOC now supports heading levels 1 to 15.
	- HTMLDOC now allows the author to omit headings from
	  the TOC using the _HD_OMIT_TOC attribute.

    CHANGES

	- HTMLDOC now calculates the resolution of the body
	  image using the printable width instead of the page
	  width.

    BUG FIXES

	- "make install" didn't work in the fonts directory.
	- "&euro;" didn't work, while "&#128;" did: the
	  character name table was not sorted properly...
	- Links didn't always point to the right page in PDF
	  output.


CHANGES IN HTMLDOC v1.8.20

    NEW FEATURES

	- New --nup and NUMBER-UP options for PostScript and PDF
	  output.
	- HTMLDOC now logs HTML errors.
	- HTMLDOC now supports the A3, B, Legal, and Tabloid
	  size names.
	- HTMLDOC now supports embedding of the base Type1 fonts
	  in PostScript and PDF output.

    CHANGES

	- The HTML parser now allows BODY to auto-close HEAD and
	  visa-versa.

    BUG FIXES

	- HTMLDOC wouldn't compile using GCC under HP-UX due to
	  a badly "fixed" system header file (vmtypes.h).
	- Generating a book without a table-of-contents would
	  produce a bad PDF file.
	- The Xerox XRX comments used the wrong units for the
	  media size, points instead of millimeters.
	- IMG elements with links that use the ALIGN attribute
	  didn't get the links.
	- Header and footer comments would interfere with the
	  top and bottom margin settings.
	- Fixed a bug in the htmlReadFile() function which
	  caused user-provided title pages not to be displayed
	  in PS or PDF output.
	- The table-of-contents would inherit the last media
	  settings in the document, but use the initial settings
	  when formatting.


CHANGES IN HTMLDOC v1.8.19

    NEW FEATURES

	- Now support the "subject" meta variable.

    CHANGES

	- Updated the HTML parser to use HTML 4.0 rules for
	  embedding elements inside a LI.