@@ -33,6 +33,8 @@
 	<LI>Links didn't always point to the right page in PDF
 	output.
 
+	<LI>XRX comment output could crash HTMLDOC.
+
 </UL>
 
 <H2>Changes in HTMLDOC v1.8.20</H2>
